[fixes #27771709] download icon left aligned

--- a/app/stylesheets/partials/_admin.sass
+++ b/app/stylesheets/partials/_admin.sass
@@ -357,5 +357,5 @@ body.app #content .tabs
       border-bottom: 1px solid #eee
 
 .download td a
-  background: image_url("icon_download.png") no-repeat right center
-  padding-right: 20px
+  background: image_url("icon_download.png") no-repeat left center
+  padding-left: 20px
